# Cerebro-life-desktop

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend-src/: README.md  alpaca_client.py  audit_logger.py  autonomy_config.py  git_manager.py  health_monitor.py  improvement_engine.py  learning_injector.py  main.py  mcp_bridge.py  predictive_interrupt.py  proactive_agent.py  requirements.txt  rollback_engine.py  safe_restart.py  self_modification.py  sim_engine_client.py  staging_manager.py  tools.py  usage_tracker.py
config/: mcp-desktop.json
docker/: Dockerfile.backend  Dockerfile.memory  (+4 more)
memory-src/: README.md  pyproject.toml
memory-src/src/: __init__.py  abstractor.py  active_reasoner.py  ai_embeddings_engine.py  ai_memory_service.py  ai_memory_ultimate.py  anticipation_engine.py  auto_context_injector.py  autosave_hook.py  autosave_worker.py  branch_tracker.py  capability_analysis.py  causal_extractor.py  causal_model.py  cli.py  code_indexer.py  confidence_tracker.py  config.py  consolidator.py  content_filter.py  context_injector.py  corrections_detector.py  corrections_integration.py  corrections_tracker.py  decay_pipeline.py  deduplicator.py  device_registry.py  dgx_embedding_client.py  dgx_search_client.py  dgx_validator.py  distiller.py  embedding_service.py  emotional_detector.py  entity_detector.py  episodic_memory.py  failure_anticipator.py  feedback_detector.py  goal_tracker.py  health_checker.py  image_processor.py  (+52 more)
memory-src/src/config/: performance.json
memory-src/src/context/: __init__.py  cwd_detector.py  relevance_scorer.py  token_budget.py
memory-src/src/knowledge/: __init__.py  fact_deduplicator.py  fact_linker.py
memory-src/src/maintenance/: __init__.py  auto_maintenance.py  consolidate_facts.py  initialize_project_evolution.py  migrate_to_episodic.py  process_missing_embeddings.py  reset_user_profile.py  run_maintenance_silent.vbs  setup_scheduled_task.bat  toast_notifier.py  verify_system_health.py
memory-src/src/patterns/: __init__.py  applier.py  validator.py
memory-src/src/personality/: __init__.py  consistency_checker.py  evolution_engine.py  evolution_engine.py.bak  trait_tracker.py
memory-src/src/reflection/: __init__.py  improvement_tracker.py  performance_tracker.py
memory-src/tests/: __init__.py  test_config.py
(+65 files in other folders)
